Fixing header alignment

--- a/index.css
+++ b/index.css
@@ -14,7 +14,6 @@ header {
 }
 
 h1 {
-    margin-top: 2rem;
     font-family: "Roboto Mono";
 }
 
